# CRM

./: .gitignore  DEPLOYMENT.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_core_tables.py  0002_rls_policies.py  0003_login_lookup.py  0004_crm_tables.py  0005_crm_rls.py
backend/api/: index.py
backend/app/: config.py  database.py  main.py
backend/app/core/: deps.py  email.py  ws.py
backend/app/core/middleware/: tenant_context.py
backend/app/core/models/: __init__.py  base.py  tenant.py  user.py
backend/app/core/routers/: auth.py  invites.py  oauth.py
backend/app/core/schemas/: auth.py
backend/app/core/security/: jwt.py
backend/app/crm/: models.py  schemas.py
backend/app/crm/routers/: activities.py  crm_tasks.py  custom_views.py  deals.py  leads.py  stages.py  ws.py
backend/scripts/: provision_roles.sql
backend/tests/: conftest.py  test_auth_schemas.py  test_config.py  test_database.py  test_deps.py  test_invites.py  test_jwt.py  test_login.py  test_models.py  test_oauth.py  test_passwords.py  test_refresh.py  test_rls.py  test_signup.py
backend/tests/crm/: conftest.py  test_activities.py  test_crm_tasks.py  test_custom_views.py  test_deals.py  test_leads.py  test_stages.py
docs/superpowers/plans/: 2026-06-23-phase-0-foundation.md  (+1 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: main.ts  style.css
(+31 files in other folders)
